# Handwritten-Digit-Recognition-using-Deep-Learning

./: .coverage  .gitignore  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  run_cov.sh  sonar-project.properties  sonar.sh  trace_runner.py  visualize.ipynb
.scannerwork/: report-task.txt
1. K Nearest Neighbors/: profile.html  profile.json
2. SVM/: profile.html  profile.json
3. Random Forest Classifier/: profile.html  profile.json
CNN_Keras/: CNN_MNIST.py  callgraph.py  cnn_callgraph.dot  cnn_profile.pstats  profile.html  profile.json
CNN_Keras/cnn/: neural_network.py
coverage/: class_index.html  coverage.xml  function_index.html  index.html  status.json  z_30bbf71ff0908460_conftest_py.html  z_30bbf71ff0908460_test_cnn_py.html  z_36575729f2b13145_cnn_py.html  z_39a8737fa35a6ad0_knn_py.html  z_5d6cea28a0c35f41_svm_py.html  z_66600b5b2d4d3add_conftest_py.html  z_66600b5b2d4d3add_test_rfc_py.html  z_75fe2cd499017b85___init___py.html  z_75fe2cd499017b85_neural_network_py.html  z_8725b824256abdf5_rfc_py.html  z_8c2eb398fbdf5b85_conftest_py.html  z_8c2eb398fbdf5b85_test_knn_py.html  z_c07da247e624c6a3_conftest_py.html  z_c07da247e624c6a3_test_svm_py.html
loader/: data_loader.py  pyproject.toml
sonarqube/: 2025-06-19-Handwritten-Digit-Recognition-using-Deep-Learning-analysis-report.docx  2025-06-19-Handwritten-Digit-Recognition-using-Deep-Learning-analysis-report.md  2025-06-19-Handwritten-Digit-Recognition-using-Deep-Learning-issues-report.csv  2025-06-19-Handwritten-Digit-Recognition-using-Deep-Learning-issues-report.xlsx
(+52 files in other folders)
